--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "echo-rust"
+name = "echo"
 version = "0.1.0"
 authors = ["Eduardo Brunaldi dos Santos <eduardo.brunaldi.santos@gmail.com>"]
 edition = "2018"
@@ -7,4 +7,3 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-regex = "1.3.7"
